--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+img {
+    object-fit: contain;
+    width: 100%;
+}
+
 /* Body */
 body {
     display: grid;
@@ -50,6 +55,59 @@ main {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
+
+        .pokemon-data-container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, auto);
+
+            /* Metallic effect taken from URL: https://ibelick.com/blog/creating-metallic-effect-with-css */
+            background: linear-gradient(
+                45deg,
+                #999 5%,
+                #fff 10%,
+                #ccc 30%,
+                #ddd 50%,
+                #ccc 70%,
+                #fff 80%,
+                #999 95%
+            );
+            text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+
+            margin: 0.5rem;
+
+            .pokemon-sprite{
+                grid-column: span 2;
+                grid-row: 1;
+            }
+
+            .pokemon-data-name-section{
+                grid-column: 1;
+                grid-row: 2;
+                text-align: center;
+            }
+
+            .pokemon-moves-form{
+                grid-column: 1;
+                grid-row: 3;
+                text-align: center;
+                margin-bottom: 0.25rem;
+            }
+
+            .pokemon-shiny-container{
+                grid-column: 2;
+                grid-row: 2;
+                text-align: center;
+            }
+
+            .pokemon-ability-form{
+                grid-column: 2;
+                grid-row: 3;
+                text-align: center;
+            }
+        }
     }
 
     /* Fill blank space with the color I wanted. */
@@ -74,7 +132,7 @@ footer {
     grid-template-columns: repeat(4, 1fr);
 
     /* Pokemon Data Section Styling */
-    #pokemon-data-section {
+    #pokemon-name-section {
         grid-column: 2 / span 2;
         display: grid;
         justify-content: space-evenly;
